# memory.journal

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
src/memoryjournal/: __init__.py  _quotes.py  _version.py  auth.py  config.py  db.py  journal.py  schema.sql  util.py  wsgi.py
src/memoryjournal/static/: style.css
src/memoryjournal/templates/: base.html  base_layout.html  index.html  journalbase.html
src/memoryjournal/templates/auth/: add_journal.html  open_journal.html
src/memoryjournal/templates/journal/: add_memory.html  edit_memory.html  index.html  list_memories.html  settings.html  view_memory.html
