[build-system]
requires = ["setuptools >= 80.0.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory.journal"
dynamic = ["version"]
dependencies = [
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "markdown>=3.10",
    "platformdirs>=4.5.1",
    "typer>=0.20.0",
]
requires-python = ">=3.11"
authors = [
	{name="Siddhant Sharma", email="sharmasiddhant@protonmail.com" },
]
description = "Write description here."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = []

[tool.setuptools_scm]
local_scheme="no-local-version"
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
memoryjournal = "memoryjournal.wsgi:run_with_gunicorn"

[project.urls]
Repository = "https://github.com/shsiddhant/memory.journal"
Issues = "https://github.com/shsiddhant/memory.journal/issues"
Changelog = "https://github.com/shsiddhant/memory.journal/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
doc = [
    "ipython>=8.37.0",
    "numpydoc>=1.9.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
]

